# simply-storage

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: backup.yml  build-push.yml  ci.yml  deploy-hetzner.yml  deploy-windows.yml  restore.yml  test-disk-alert.yml  test-report.yml
api/: bruno.json  test-upload.txt
api/Auth/: Create User.bru  Delete User.bru  List Users.bru  Login.bru  Logout.bru  Me.bru  Refresh.bru
api/Bulk Operations/: Download Export.bru  Export Status.bru  Start Export.bru  Sync All Files.bru
deploy/: .env.example  README-deploy.md  cloud-init.yml  deploy.sh  docker-compose.large.yml  docker-compose.medium.yml  docker-compose.prod.yml  docker-compose.small.yml
docker/: nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
migrations/: 001_initial_schema.sql  002_nodes.sql  003_soft_delete_and_retry_after.sql  004_project_storages.sql  005_users.sql  006_add_token_hash_index.sql  007_user_assignments.sql  008_file_metadata.sql  009_user_project_roles.sql  010_allow_duplicate_file_references.sql  011_shared_links.sql  012_shared_links_cleanup.sql  013_storage_direct_links.sql  014_sync_tasks_project_id.sql  015_container_per_project.sql  016_backup_config.sql  017_backup_history_config_name.sql  018_upload_sessions.sql  019_file_access_events.sql
src/: config.rs  error.rs  lib.rs  main.rs
terraform/: .terraform.lock.hcl  cloud-init.yml  main.tf  outputs.tf  variables.tf  versions.tf
(+136 files in other folders)
